Create component and add router-link for component

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -22,9 +22,9 @@ body{
 }
 
 @media(max-width: 768px){
-    .dashboard {
+    /* .dashboard {
         padding: 20px !important;
-    }
+    } */
     .card {
         margin-bottom: 15px;
     }
