--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -91,19 +91,23 @@
 .avatar{
     width: 120px;
     height: 120px;
+
+}
+.avatar img {
+    width: 120px;
+    height: 120px;
     border-radius: 100%;
-    margin: 15px auto;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
     background-color: #f5f5f5;
     border: 1px solid #DFE4F1;
-    background-image: url('../avatar.png')
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 35%;
 }
 .avatar-name{
     text-align: center;
     font-size: 18px;
     margin-left: -25px;
+    margin-top: 40px;
 }
 .caret{
     margin-right: 10px;
