--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap);
 
 #wrapper {
     padding-left: 0;
@@ -5,6 +6,7 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    font-family: 'Cabin', sans-serif;
 }
 #wrapper.toggled {
     padding-left: 250px;
@@ -57,7 +59,7 @@
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #5b6e88;
+    color: black;
     padding: 10px 0;
     font-size: 19px;
     text-align: left;
@@ -66,11 +68,15 @@
     font-size: 15px;
 }
 .sidebar-nav li a:hover {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    /* background-color: #F76B1C;
+    background-image: linear-gradient(90deg, #F76B1C 0%, #FAD961 100%); */
+    background-color: tomato;
+    border-radius: 5px;
 }
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #000;
+    color: #f5f5f5;
 }
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
@@ -132,4 +138,13 @@
         position: relative;
         margin-right: 0;
     }
+}
+
+ul li i {
+    margin-right: 5px;
+}
+
+h3.avatar-name {
+    font-size: 20px;
+    font-weight: 500;
 }
