--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 .card {
-    margin-bottom: 30px;
+    margin-bottom: 12px;
     border: none;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
@@ -11,6 +11,7 @@ body{
     -webkit-box-shadow: 0 0 37px rgba(8,21,66,0.05);
     box-shadow: 0 0 37px rgba(8,21,66,0.05);
     border: none !important;
+    border-radius: 10px !important;
 }
 
 .card .card-body .media-body{
