--- a/src/assets/css/QnAMaker.css
+++ b/src/assets/css/QnAMaker.css
@@ -12,6 +12,10 @@
     padding: 10px;
 }
 
+#question {
+    padding: 10px;
+}
+
 #title {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -23,14 +27,6 @@
 
 .form-search input {
     width: 90%;
-}
-
-#keyword-input {
-    background-color: #dfe6e9;
-}
-
-#keyword-input:enabled {
-    background-color: white;
 }
 
 input#keyword-input {
@@ -94,6 +90,7 @@ input#keyword-input {
     background-image: linear-gradient(90deg, #F76B1C 0%, #FAD961 100%);     */
     background-color: tomato;
     border: none;
+    text-align: center;
 }
 
 #btn-submit button:hover {
@@ -136,6 +133,7 @@ button#openMessages i {
     background-color: white;
     margin-bottom: 70px;
     border-radius: 10px;
+    border: 1px solid #e8e8e8;
 }
 
 #title-box {
@@ -156,6 +154,7 @@ button#openMessages i {
     height: 80%;
     overflow: hidden;
     border-bottom: 1px solid #e8e8e8;
+    font-size: 14px;
 }
 
 #send {
@@ -255,7 +254,7 @@ button#openMessages i {
 }
 
 .question-list {
-    height: 620px;
+    height: 627px;
     overflow-y: scroll;
 }
 
@@ -264,3 +263,7 @@ button#openMessages i {
 }
 
 
+/* Usually bottom */
+#btn-submit {
+    text-align: center;
+}
