--- a/src/assets/css/NotFound.css
+++ b/src/assets/css/NotFound.css
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 900px;
     height: 550px;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 25px;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -125,14 +125,15 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 20px;
     border-radius: 20px;
     border: none;
-    background-color: #6078ea;
+    background-color: tomato;
     margin-top: 50px;
     color: white;
     font-weight: 600;
 }
 
 .btn button:hover {
-    background-color: #7d90ff;
+    background-color: #f9e41a;
+    color: black;
 }
 
 .btn button:focus{
