--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -111,3 +111,26 @@ th {
 th:focus {
     outline: none;
 }
+
+/* Mode scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 100px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
