Add UI for Overall, Individual, Quizzes

--- a/src/assets/css/QuestionList.css
+++ b/src/assets/css/QuestionList.css
@@ -120,3 +120,8 @@ button.delete:hover {
 .questionList {
     overflow-y: scroll;
 }
+
+.question-list {
+    padding-left: 15px;
+    padding-right: 15px;
+}
