--- a/src/assets/css/ExampleCode.css
+++ b/src/assets/css/ExampleCode.css
@@ -106,3 +106,11 @@ input#keyword-input {
         text-align: center;
     }
 }
+
+th {
+    text-align: center;
+}
+
+td {
+    text-align: center;
+}
