--- a/src/assets/css/QuestionList.css
+++ b/src/assets/css/QuestionList.css
@@ -125,3 +125,41 @@ button.delete:hover {
     padding-left: 15px;
     padding-right: 15px;
 }
+
+.QuestionID {
+    text-align: center;
+    width: auto;
+    min-width: 0;
+    max-width: 5%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.Question {
+    text-align: center;
+    width: auto;
+    min-width: 200px;
+    max-width: 25%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+th.Answer {
+    text-align: center;
+    width: auto;
+    min-width: 200px;
+    max-width: 23%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+td {
+    text-align: center;
+}
+
+.pick {
+    line-height: 5px;
+}
